--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@ venv/
 __pycache__/
 *.pyc
 .DS_Store
+venv/
+__pycache__/
+*.pyc
+.DS_Store
+venv/
+__pycache__/
+*.pyc
+.DS_Store
+venv/
+__pycache__/
+*.pyc
+.DS_Store
